<resources>
    <string name="app_name">Just Java Advanced</string>
    <string name="quantityText">Quantity</string>
    <string name="quantityValue">0</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="priceText">Price per Cup: </string>
    <string name="price">$5.00</string>
    <string name="orderTotal">$0.00</string>
    <string name="orderButtonText">Submit Order</string>
    <string name="toppings">Options</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate Sprinkles</string>
    <string name="topping3">Caramel Liquor</string>
    <string name="drinkPrompt">Pick Your Drink</string>
    <string name="drinkSizePrompt">Select Your Size</string>
    <string name="drinkQuantityPrompt">Quantity</string>


    <string-array name="drinkTypes">
        <item>Americano</item>
        <item>Mocha</item>
        <item>Latte</item>
        <item>Cappucino</item>
    </string-array>

    <string-array name="drinkSizes">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>

    <string-array name="drinkQuantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
